appContainer style flicker fix

--- a/koreai/apps/searchassist/src/app/app.component.scss
+++ b/koreai/apps/searchassist/src/app/app.component.scss
@@ -68,6 +68,9 @@
     visibility: hidden;
   }
   &.appSelected {
+    .emptyStateContainer {
+      padding-top: 0;
+    }
     .trainBlock {
       display: block !important;
     }
